# lox-compiler

./: CLoxLiteral.cpp  CLoxLiteral.h  CMakeLists.txt  Chunk.cpp  Chunk.h  Compiler.cpp  Compiler.h  DebugUtils.cpp  DebugUtils.h  FileReader.cpp  LoxError.cpp  LoxError.h  LoxValue.cpp  LoxValue.h  Memory.cpp  Memory.h  Scanner.cpp  Scanner.h  TokenType.cpp  TokenType.h  Utils.cpp  Utils.h  VM.cpp  VM.h  in.lox  main.cpp  memory_usage.py  readme.md  test.cpp
benchmarks/: clox-marksweep  clox-refcounting  cycle.lox  cycles.lox  delayed_collection.lox  many_objects.lox  marksweep_cycles_200_1.txt  marksweep_delayed_collection.txt  marksweep_many_objects_200_1.txt  memory_usage.py  refcounting_cycles.txt  refcounting_delayed_collection.txt  refcounting_many_objects.txt  test.lox
paper/: Tobias_Pristupin_GC.aux  Tobias_Pristupin_GC.fdb_latexmk  Tobias_Pristupin_GC.fls  Tobias_Pristupin_GC.out  Tobias_Pristupin_GC.tex  Tobias_Pristupin_GC.toc
